pod-test.yaml
apiVersion : v1
kind: Pod
metadata:
    name: test-travis
    labels: 
        env  : prod
        app  : main
        tier : frontend
spec:
    containers:
        - name: test-cont 
          image: gcr.io/studious-set-280411/travis-ci-build-stages-demo
          ports: 
            - containerPort: 80
