loadbalancer-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-service
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app: main
spec:
  type: LoadBalancer
  selector:
    app: main
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
