ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: angular-stage-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: angular-stage-service
          servicePort: 80
